Cleanup of heap tracking